--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A web-based dashboard for monitoring and interacting with Botch (OpenClaw agent).",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test-suite.js",
     "start": "node server.js"
   },
   "keywords": [],
