--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,10 +40,20 @@ jobs:
         echo '{}' > api/config-files.json
         echo '[]' > api/chat-history.json
     
-    - name: Start server
+    - name: Start server and wait for it
       run: |
-        node server.js &
-        sleep 3
+        nohup node server.js > server.log 2>&1 &
+        echo "Waiting for server..."
+        for i in {1..30}; do
+          if curl -s http://127.0.0.1:8765/api/meta.json > /dev/null 2>&1; then
+            echo "Server is ready!"
+            break
+          fi
+          sleep 1
+        done
+        cat server.log || true
     
     - name: Run tests
-      run: node test-suite.js
+      run: CI=true node test-suite.js
+      env:
+        SKIP_BROWSER_TESTS: 'true'
